<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/how_to_paint_wall_murals_for_kids_8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/InstructionOneView"
        android:layout_width="208dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/Instruction_One_Text"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <EditText
        android:id="@+id/editTextLength"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="0"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="0"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <EditText
        android:id="@+id/editTextWidth"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="0"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/HeightView"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/Height_Text"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/LengthView"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Length_Text"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/WidthView"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/Width_Text"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/TitleView"
        android:layout_width="268dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/amarante"
        android:text="@string/Title_view"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction2View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:hint="0"
        android:text="@string/Instruction_Two_Text"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <EditText
        android:id="@+id/editTextNumWindows"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="0"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <EditText
        android:id="@+id/editTextNumDoors"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="0"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/DoorView"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="192dp"
        android:gravity="center"
        android:text="@string/Door_Text"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <TextView
        android:id="@+id/WindowView"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="244dp"
        android:gravity="center"
        android:text="@string/Window_Text"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleView" />

    <Button
        android:id="@+id/ComputeButton"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:onClick="computeGallons"
        android:text="@string/Gallons_Text"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeightView"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/HelpButton"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:onClick="getHelp"
        android:text="@string/help"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeight"
        app:layout_constraintVertical_bias="0.524" />

    <TextView
        android:id="@+id/areaView"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/surface_area"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <TextView
        android:id="@+id/gallons_text"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:hint="0"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <TextView
        android:id="@+id/surface_area_text"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:hint="0"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/gallons_view"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/gallons_needed"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

</androidx.constraintlayout.widget.ConstraintLayout>